<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_team"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/home_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/home_team"
        app:layout_constraintStart_toStartOf="@+id/home_team"
        app:layout_constraintTop_toBottomOf="@+id/home_team"
        tools:text="Manchester United" />

    <TextView
        android:id="@+id/game_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/away_score"
        app:layout_constraintStart_toStartOf="@+id/home_score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/home_name"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/home_team"
        app:layout_constraintTop_toTopOf="@+id/home_team"
        tools:text="2" />

    <TextView
        android:id="@+id/league_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/away_score"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/home_score"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.028"
        tools:text="ENG P1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_separator"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/home_score"
        app:layout_constraintEnd_toStartOf="@+id/away_score"
        app:layout_constraintStart_toEndOf="@+id/home_score"
        app:layout_constraintTop_toTopOf="@+id/home_score" />

    <TextView
        android:id="@+id/away_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/away_name"
        app:layout_constraintEnd_toStartOf="@+id/away_team"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/away_team"
        tools:text="7" />

    <ImageView
        android:id="@+id/away_team"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/away_score"
        app:layout_constraintTop_toTopOf="@+id/home_team" />

    <TextView
        android:id="@+id/away_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/home_name"
        app:layout_constraintEnd_toEndOf="@+id/away_team"
        app:layout_constraintStart_toStartOf="@+id/away_team"
        app:layout_constraintTop_toBottomOf="@+id/away_team"
        tools:text="Spurs" />

    <LinearLayout
        android:id="@+id/info_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_name">

        <TextView
            android:id="@+id/home_team_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/home_team_info" />

        <TextView
            android:id="@+id/away_team_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/away_team_info" />
    </LinearLayout>

    <ImageView
        android:id="@+id/info_small_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_tab" />

    <TextView
        android:id="@+id/target_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/info_small_image"
        app:layout_constraintStart_toEndOf="@+id/info_small_image"
        app:layout_constraintTop_toTopOf="@+id/info_small_image"
        tools:text="Spurs" />

    <TextView
        android:id="@+id/squad_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/squad_info"
        app:layout_constraintBottom_toBottomOf="@+id/target_team"
        app:layout_constraintEnd_toStartOf="@id/info_separator"
        app:layout_constraintTop_toTopOf="@+id/target_team" />

    <TextView
        android:id="@+id/info_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/info_separator"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/squad_info"
        app:layout_constraintEnd_toStartOf="@+id/info_team"
        app:layout_constraintTop_toTopOf="@+id/squad_info" />

    <TextView
        android:id="@+id/info_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/info_team"
        app:layout_constraintBottom_toBottomOf="@id/info_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/info_separator" />

    <FrameLayout
        android:id="@+id/info_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/info_small_image" />

</androidx.constraintlayout.widget.ConstraintLayout>